# vulkan

./: CMakeLists.txt  LICENSE.txt  readme.md
cmake/: FindASSIMP.cmake
data/models/castle/: siegeBallistaRed.mtl  siegeCatapultRed.mtl  siegeRamRed.mtl  siegeTowerRed.mtl  siegeTrebuchetRed.mtl  towerSquareMidColorGreen.mtl
data/models/shapes/: cube.mtl
data/scripts/: castle.lua  scenes.lua  shaders_demo.lua
data/shaders/: diffuse.frag.spv  frag.spv  normals.geom.spv  normals_debug.geom.spv  normals_debug.vert.spv  shader.frag  shader.vert  skybox.frag.spv  skybox.vert.spv  specular.vert.spv  toon.frag.spv  ui.frag.spv  vert.spv
data/textures/ui/: controls.xcf
src/: CMakeLists.txt
src/include/: camera.hpp  config.hpp  constants.hpp  material.hpp  mesh.hpp  model.hpp  obj_import.hpp  sdl_init.hpp  structs.hpp  test_scene.hpp  texture.hpp  utils.hpp  vulkan_context.hpp  vulkan_structs.hpp  vulkan_utils.hpp
src/include/managers/: resource_manager.hpp
src/include/vk/: commandbuffer.hpp  framebuffer.hpp  pipelines.hpp  renderpass.hpp  swapchain.hpp  vulkan_context.hpp  vulkan_memory_block.hpp  vulkan_memory_manager.hpp  vulkan_pointers.hpp  vulkan_resources.hpp  vulkan_structs.hpp  vulkan_utils.hpp
src/other/: CMakeLists.txt
src/shaders/: compile_and_copy.sh  diffuse.frag  diffuse.vert  diffuse.vert.spv  frag.spv  normals_debug.frag  normals_debug.frag.spv  normals_debug.geom  normals_debug.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  specular.frag  specular.frag.spv  specular.vert  toon.frag  ui.frag  ui.vert  ui.vert.spv  vert.spv  wireframe.frag  wireframe.frag.spv  wireframe.vert  wireframe.vert.spv
src/src/: camera.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  sdl_init.cpp  structs.cpp  texture.cpp  utils.cpp  vulkan_context.cpp
src/src/managers/: resource_manager.cpp
src/src/vk/: commandbuffer.cpp  framebuffer.cpp  pipelines.cpp  renderpass.cpp  swapchain.cpp  vulkan_context.cpp  vulkan_memory_block.cpp  vulkan_memory_manager.cpp  vulkan_resources.cpp
